fix(config): 更新MySQL驱动配置并初始化数据库表结构
- 将MySQL驱动类从com.mysql.jdbc.Driver更新为com.mysql.cj.jdbc.Driver
- 在mysql-init.sql中创建users表用于存储用户信息
- 在mysql-init.sql中创建tags表用于存储标签信息
- 优化OnnxTest测试类中的相似度计算输出格式
- 更新RAGTransferService中路径构建方式使用Path.of替代Paths.get